--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dotenv": "^6.0.0",
     "express": "^4.14.0",
+    "moment": "^2.22.2",
     "mysql2": "^1.3.6",
+    "nodemailer": "^4.6.6",
     "sequelize": "^4.3.1"
   },
   "devDependencies": {
