update all html to handlerbars

--- a/package.json
+++ b/package.json
@@ -1,38 +1,34 @@
 {
-  "name": "Dime ERM Group Project",
+  "name": "dime_erm_group_project",
   "version": "1.0.0",
-  "description": "",
+  "description": "create a simple platform for product management",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
-    "start": "node server.js",
-    "watch": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/laurawilsone/project-two.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/laurawilsone/project-two/issues"
+  },
+  "homepage": "https://github.com/laurawilsone/project-two#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
-    "chart.js": "^2.7.2",
-    "chartjs": "^0.3.24",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
-    "express-validator": "^5.2.0",
-    "moment": "^2.22.2",
     "mysql2": "^1.5.3",
     "nodemailer": "^4.6.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.37.10"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "nightmare": "^3.0.1"
   }
 }
