--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Swaff789",
+    "password": "Raining2301",
     "database": "dime_ERM",
     "host": "127.0.0.1",
     "port": 3306,
