header and footer

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
 
-  "password": "Swaff789",
+  "password": "root",
 
     "database": "dime_ERM",
     "host": "127.0.0.1",
