--- a/package.json
+++ b/package.json
@@ -25,13 +25,10 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
-    "fs": "0.0.1-security",
     "mysql2": "^1.5.3",
     "nodemailer": "^4.6.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7",
-    "sequelize": "^4.37.10",
-    "user": "0.0.0"
+    "sequelize": "^4.37.10"
   }
 }
